# move

./: Cargo.toml  README.md
language/move-binary-format/: Cargo.toml
language/move-binary-format/src/: access.rs  binary_views.rs  check_bounds.rs  compatibility.rs  constant.rs  control_flow_graph.rs  cursor.rs  deserializer.rs  errors.rs  file_format.rs  file_format_common.rs  lib.rs  normalized.rs  proptest_types.rs  serializer.rs  views.rs
language/move-binary-format/src/proptest_types/: functions.rs  types.rs
language/move-binary-format/src/unit_tests/: compatibility_tests.rs  number_tests.rs  signature_token_tests.rs
language/move-borrow-graph/: Cargo.toml
language/move-borrow-graph/src/: graph.rs  lib.rs  paths.rs  references.rs  shared.rs
language/move-bytecode-verifier/: Cargo.toml
language/move-bytecode-verifier/src/: ability_field_requirements.rs  absint.rs  acquires_list_verifier.rs  check_duplication.rs  code_unit_verifier.rs  control_flow.rs  control_flow_v5.rs  cyclic_dependencies.rs  dependencies.rs  instantiation_loops.rs  instruction_consistency.rs  lib.rs  loop_summary.rs  script_signature.rs  signature.rs  struct_defs.rs  type_safety.rs
language/move-bytecode-verifier/src/locals_safety/: abstract_state.rs
language/move-bytecode-verifier/src/reference_safety/: abstract_state.rs  mod.rs
language/move-core/types/: Cargo.toml
language/move-core/types/src/: abi.rs  account_address.rs  effects.rs  errmap.rs  gas_algebra.rs  identifier.rs  language_storage.rs  lib.rs  metadata.rs  move_resource.rs  parser.rs  resolver.rs  transaction_argument.rs  u256.rs  value.rs  vm_status.rs
language/move-core/types/src/unit_tests/: identifier_test.rs
