[workspace]
resolver = "2"

members = [
    "language/move-borrow-graph",
    "language/move-core/types",
]

# NOTE: default-members is the complete list of binaries that form the "production Diem codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
bcs = "0.1.4"


[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

