[package]
name = "move-core-types"
version = "0.0.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "Core types for Move"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
bcs = "0.1.2"
hex = "0.4.3"
once_cell = "1.7.2"
proptest = { version = "1.0.0", default-features = false, optional = true }
proptest-derive = { version = "0.3.0", default-features = false, optional = true }
primitive-types = { version = "0.12.0", default-features = false, features = ["codec", "scale-info"] }
rand = { version = "0.8.5", optional = true, features = ["small_rng"] }
ref-cast = "1.0.6"
serde = { version = "1.0.124", default-features = false }
serde_bytes = "0.11.5"
uint = "0.9.4"
num = "0.4.0"
ethnum = "1.0.4"
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"], optional = true }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.29" }

[dev-dependencies]
hashbrown = "0.12.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
regex = "1.5.5"
rand = "0.8.5"
serde_json = "1.0.64"
arbitrary = { version = "1.1.7", features = [ "derive_arbitrary"] }

[features]
address20 = []
address32 = []
default = ["std"]
fuzzing = ["proptest", "proptest-derive"]

std = [
    "arbitrary",
    "anyhow/std",
    "sp-core/std",
    "sp-std/std",
    "proptest/std",
    "primitive-types/std",
    "primitive-types/serde",
    "primitive-types/byteorder",
    "primitive-types/rustc-hex",
    "rand"
]

